2006-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-note.c: Fixing the behaviour of
	hildon_note_new_confirmation_with_icon_stock. Fixes #NB22825.

2006-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-font-selection-dialog.c: Adding a
	"font-scaling" property that allows to customize the output of the
	Preview dialog during font selection. By default font-scaling equals
	1.0 = no change. Applications/clients should apply here the
	font-scaling they use for user-output/visualization. Fixes #NB19001.

2006-09-05  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* src/hildon-widgets/hildon-find-toolbar.c: Start search on "activate"
	entry signal instead of only KP_Enter. 

2006-09-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-banner.c: Aling the stock images to 0.0
	position, not to the center. Fixes #NB31168.

2006-09-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-color-selector.c:
	* hildon-widgets/hildon-time-picker.c: Applying a small patch by
	Tamminen Eero to save some bytes of ram. Fixes #NB22965.

2006-09-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-font-selection-dialog.c: Excluding some more
	hardcoded fonts from the font selection dialog. We need a flexible API
	to do that in future, but currently introducing it wouldn't be
	feasible. Fixes #NB30530.

2006-09-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog: Small ver. fix.

2006-09-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.0 release]

2006-09-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog: Adding info about bugs fixed: #NB16830, #NB38487,
	#NB36938, #NB34642, #NB32772, #NB38598.

	* doc/design/abstract_vs_modular_plugin_widgets.dia:
	* doc/design/abstract_vs_modular_plugin_widgets.png: Adding the